--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>ART 215</title>
 
-<link rel="stylesheet" href = "main.css">
+<link rel="stylesheet" href = "style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
