--- a/index.html
+++ b/index.html
@@ -4,31 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>ART 215</title>
-
-<link rel="stylesheet" href = "style.css">
+  <title>p5.js animation example</title>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
 </head>
 
-  <body>
-    <div id="header"></div>
-    <div id="row1"></div>
-    <div id="row2"></div>
-    <div id="row3"></div>
-    <div id="row4"></div>
-    <div id="row5"></div>
-    <div id="row6"></div>
-    <div id="row7"></div>
-    <div id="row8"></div>
-    <div id="row9"></div>
-    <div id="row10"></div>
-    <div id="row11"></div>
+<body>
+  <main>
+  </main>
+</body>
 
-      <footer class="footer">  </footer>
-
-  </body>
-<!--   -->
-  </html>
+</html>
